# speed_meter_plugin

./: CMakeLists.txt  README.md  package.xml  plugins_description.xml
include/speed_meter_plugin/: speed_meter_plugin.hpp  visibility_control.h
src/: speed_meter_plugin.cpp
test/: test.rviz
