<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speed_meter_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="160442065@ccalumni.meijo-u.ac.jp">rosdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>libqt5-widgets</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
